fixed contrast in darkmode

--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -31,14 +31,14 @@
   font-size: 2rem;
   margin-bottom: 3rem;
   text-align: center;
-  color: var(--grey-dark);
+  color: var(--card-text);
 }
 
 .card__row {
   display: flex;
   align-items: center;
   font-size: 1.5rem;
-  color: var(--grey-dark);
+  color: var(--card-text);
 }
 
 .card__row:not(:last-child) {
